--- a/src/index.html
+++ b/src/index.html
@@ -1,3 +1,9 @@
+<style>
+    #editor {
+        min-height: 90vh;
+        min-width: 50vw;
+    }
+</style>
 <div class="row mb-3">
     <div class="col" id="btnRun"></div>
 </div>
