Updated the main page.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 
 <head>
     <script src="./dist/code-editor.js"></script>
+    <style>
+        #editor {
+            min-height: 90vh;
+            min-width: 50vw;
+        }
+    </style>
 </head>
 
 <body class="bs">
