Updated the main function to return the editor.

--- a/src/index.html
+++ b/src/index.html
@@ -3,15 +3,7 @@
 </div>
 <div class="row">
     <div class="col">
-        <div id="editor">// Use the 'app' variable to reference the output panel's main element.
-// Example Button:
-GD.Components.Button({
-    el: app,
-    text: "Example",
-    onClick: function() {
-        alert("You clicked the button.");
-    }
-});</div>
+        <div id="editor">// Use the 'app' variable to reference the output panel's main element.</div>
     </div>
     <div class="col">
         <div id="output"></div>
