--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body class="bs">
     <div class="container-fluid"></div>
     <script type="text/javascript">
-        CodeEditor(document.querySelector(".container-fluid"), true);
+        CodeEditor(document.querySelector(".container-fluid"), false);
     </script>
 </body>
 
