Updated the default template.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <script src="./dist/code-editor.js"></script>
     <style>
         #editor {
-            min-height: 90vh;
+            min-height: 50vh;
             min-width: 50vw;
         }
     </style>
@@ -13,7 +13,7 @@
 <body class="bs">
     <div class="container-fluid"></div>
     <script type="text/javascript">
-        CodeEditor(document.querySelector(".container-fluid"), false);
+        CodeEditor(document.querySelector(".container-fluid"), true);
     </script>
 </body>
 
