--- a/src/flip.html
+++ b/src/flip.html
@@ -1,7 +1,5 @@
-<div class="row mb-3">
-    <div class="col" id="btnRun"></div>
-</div>
-<div class="row">
+<div class="row row-cols-1">
+    <div class="col mb-3" id="btnRun"></div>
     <div class="col">
         <div id="output"></div>
     </div>
